ProductionBackUp/src/objects/Opportunity_Snapshot__c.object
<CustomObject>
    <description>Stores data for opportunity analytic snapshot to capture sales channel information for the opportunity owner upon opportunity closure.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Closed_Date__c</fullName>
        <label>Opportunity Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Run_Date__c</fullName>
        <label>Report Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Snapshot</label>
    <nameField>
        <label>Opportunity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>